--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-03 11:00+0000\n"
+"PO-Revision-Date: 2013-02-12 18:56+0000\n"
 "Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -1466,7 +1466,7 @@ msgid "Installed"
 msgstr "Installeret"
 
 msgid "Interfaces"
-msgstr "Interfacer"
+msgstr "Interfaces"
 
 msgid "Invalid comment"
 msgstr "Ugyldig kommentar"
