--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -7,13 +7,14 @@
 #   <mauro.rulli@gmail.com>, 2012.
 # Mauro Rulli <mauro.rulli@gmail.com>, 2012.
 #   <mvarelli@biologia.unipi.it>, 2012.
+# Paolo Velati <paolo.velati@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:27+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-11 18:49+0000\n"
+"Last-Translator: polxmod <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -739,7 +740,7 @@ msgid "Delete content"
 msgstr "Elimina contenuto"
 
 msgid "Delete files"
-msgstr ""
+msgstr "Elimina file"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Cancella i file sulla destinazione che non esistono sulla sorgente"
@@ -1164,12 +1165,12 @@ msgstr "File"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "I file nel cestino saranno eliminati automaticamente dopo un numero di giorni specificato. Imposta a 0 per l'eliminazione manuale."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "I file che sono più grandi del numero specificato in byte non saranno messi nel cestino. Imposta a 0 per non avere limitazioni sulla dimensione dei file."
 
 msgid "Filesystem"
 msgstr "Filesystem"
@@ -1742,7 +1743,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "Massima velocità di download (KiB/s)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "Dimensione massima file"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
@@ -2012,7 +2013,7 @@ msgid "Online"
 msgstr "Online"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Operazione non permessa all'utente '%s'."
 
 msgid "Options"
 msgstr "Opzioni"
@@ -2992,7 +2993,7 @@ msgstr "Il nome del servizio."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Il timeout di sessione definito in minuti. Imposta a 0 per disabilitare il logout automatico."
 
 msgid "The shared folder is already used by another share"
 msgstr "La directory condivisa e già in uso da un'altra condivisione"
