--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.21) stable; urgency=low
+
+  * Add OMVDeviceMapperDevice class to fix OMVStorageDeviceFactory::get()
+    issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Feb 2013 23:25:52 +0100
+
 openmediavault (0.4.20) stable; urgency=low
 
   * Update locales.
