--- a/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#  <runesudden@gmail.com>, 2013.
 #   <runesudden@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:28+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 08:14+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -736,7 +737,7 @@ msgid "Delete content"
 msgstr "Slett innhold"
 
 msgid "Delete files"
-msgstr ""
+msgstr "Slett filer"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Fjern filer på mottagende side som ikke eksisterer hos sender"
@@ -1161,12 +1162,12 @@ msgstr "Fil"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "Filene i papirkurven vil bli slettet automatisk etter det angitte antallet dager. Sett til 0 for manuell sletting."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "Filer som er større enn det angitte antallet byte vil ikke bli satt inn i papirkurven. Sett til 0 for ubegrenset filstørrelse."
 
 msgid "Filesystem"
 msgstr "Filsystem"
@@ -1739,7 +1740,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "Maximal nedlastningshastighet (KiB/s)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "Maksimal filstørrelse"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
@@ -2009,7 +2010,7 @@ msgid "Online"
 msgstr "Online"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Handling ikke tillatt for bruker '%s'."
 
 msgid "Options"
 msgstr "Alternativer"
@@ -2989,7 +2990,7 @@ msgstr "Tjenestenavnet"
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Sesjonens timeout i minutter. Sett til 0 for å deaktivere automatisk utlogging."
 
 msgid "The shared folder is already used by another share"
 msgstr "Den delte mappen er allerede i bruk av et annet delt område"
