--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/no_NO/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/no_NO/openmediavault-usbbackup.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#  <runesudden@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-15 16:25+0100\n"
-"PO-Revision-Date: 2013-02-15 15:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 08:11+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,143 +19,143 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "A backup job already exists for this storage device"
-msgstr ""
+msgstr "En sikkerhetskopi jobb, finnes allerede for denne lagringsenheten"
 
 msgid "Add USB backup job"
-msgstr ""
+msgstr "Legg til USB sikkerhetskopieringsjobb"
 
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr ""
+msgstr "En epost med kommandoresultatet (hvis noe blir produsert) vil bli sendt til administrator."
 
 msgid "Archive"
-msgstr ""
+msgstr "Arkiv"
 
 msgid "Comment"
-msgstr ""
+msgstr "Kommentar"
 
 msgid "Compress"
-msgstr ""
+msgstr "Komprimer"
 
 msgid "Compress file data during the transfer."
-msgstr ""
+msgstr "Komprimer filen når den overføres."
 
 msgid "Delete"
-msgstr ""
+msgstr "Slett"
 
 msgid "Delete files on the receiving side that don't exist on sender."
-msgstr ""
+msgstr "Slett filer som ikke lenger eksisterer hos avsender."
 
 msgid "Device '%s' not found"
-msgstr ""
+msgstr "Enhet '%s' ikke funnet"
 
 msgid "Edit USB backup job"
-msgstr ""
+msgstr "Rediger USB sikkerhetskopieringsjobb"
 
 msgid "Enable"
-msgstr ""
+msgstr "Aktiver"
 
 msgid "Enable archive mode."
-msgstr ""
+msgstr "Aktiver arkivmodus."
 
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Aktiver dette alternativet for å holde delvis overførte filer, ellers vil de bli slettet hvis overføringen avbrytes."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Aktivert"
 
 msgid "Execute USB backup job"
-msgstr ""
+msgstr "Kjør USB sikkerhetskopi jobb"
 
 msgid "External storage device"
-msgstr ""
+msgstr "Ekstern lagringsenhet"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Tilleggsfunksjoner"
 
 msgid "Failed to get filesystems"
-msgstr ""
+msgstr "Kunne ikke hente filsystemer"
 
 msgid "Filesystem '%s' not found"
-msgstr ""
+msgstr "Filsystem '%s' ikke funnet"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Behold delvis overførte filer"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Vennligst sjekk <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>bruksanvisning</a> for mer informasjon."
 
 msgid "Preserve ACLs"
-msgstr ""
+msgstr "Bevar ACL"
 
 msgid "Preserve extended attributes"
-msgstr ""
+msgstr "Bevar utvidede attributter"
 
 msgid "Preserve modification times."
-msgstr ""
+msgstr "Bevar endringstidspunkt."
 
 msgid "Preserve permissions"
-msgstr ""
+msgstr "Bevar rettigheter"
 
 msgid "Quiet"
-msgstr ""
+msgstr "Stille"
 
 msgid "Recurse into directories."
-msgstr ""
+msgstr "Rekursiv inn i mapper."
 
 msgid "Recursive"
-msgstr ""
+msgstr "Rekursivt"
 
 msgid "Run"
-msgstr ""
+msgstr "Kjør"
 
 msgid "Select a volume ..."
-msgstr ""
+msgstr "Velg et volum ..."
 
 msgid "Send command output via email."
-msgstr ""
+msgstr "Send kommando utgang via epost."
 
 msgid "Send email"
-msgstr ""
+msgstr "Send epost"
 
 msgid ""
 "Set the destination permissions to be the same as the source permissions."
-msgstr ""
+msgstr "Sett målrettighetene til å være de samme som kilderettighetene."
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Delt mappe"
 
 msgid "Suppress non-error messages."
-msgstr ""
+msgstr "Fortreng ikke-feilmeldinger"
 
 msgid "The external storage device."
-msgstr ""
+msgstr "Den eksterne lagringsenheten."
 
 msgid ""
 "The shared folder to synchronise when the external storage device is "
 "connected."
-msgstr ""
+msgstr "Den delte mappen du vil synkronisere når den eksterne lagringsenheten er tilkoblet."
 
 msgid "Times"
-msgstr ""
+msgstr "Tider"
 
 msgid "USB Backup"
-msgstr ""
+msgstr "USB Sikkerhetskopiering"
 
 msgid "Update the destination ACLs to be the same as the source ACLs."
-msgstr ""
+msgstr "Oppdater målets ACL til de samme som kildens ACL."
 
 msgid ""
 "Update the destination extended attributes to be the same as the local ones."
-msgstr ""
+msgstr "Oppdatere destinasjon utvidede attributter for å være den samme som de lokale."
 
 msgid "Volume"
-msgstr ""
+msgstr "Volum"
 
 msgid "n/a"
-msgstr ""
+msgstr "Ikke tilgjengelig"
