--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/fr_FR/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/fr_FR/openmediavault-usbbackup.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Nahir Mohamed <nahirmoha@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-15 16:25+0100\n"
-"PO-Revision-Date: 2013-02-15 15:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 18:59+0000\n"
+"Last-Translator: Nahir Mohamed <nahirmoha@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,143 +19,143 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgid "A backup job already exists for this storage device"
-msgstr ""
+msgstr "Une tâche de sauvegarde existe déjà pour ce périphérique de stockage."
 
 msgid "Add USB backup job"
-msgstr ""
+msgstr "Ajouter une tâche de sauvegarde USB"
 
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr ""
+msgstr "Un email avec la sortie de la commande (si  il y a) est envoyé à l'administrateur."
 
 msgid "Archive"
-msgstr ""
+msgstr "Archiver"
 
 msgid "Comment"
-msgstr ""
+msgstr "Commentaire"
 
 msgid "Compress"
-msgstr ""
+msgstr "Compresser"
 
 msgid "Compress file data during the transfer."
-msgstr ""
+msgstr "Compresser les données durant le transfert."
 
 msgid "Delete"
-msgstr ""
+msgstr "Supprimer"
 
 msgid "Delete files on the receiving side that don't exist on sender."
-msgstr ""
+msgstr "Supprimer les fichiers de destination qui n'existe pas dans les fichiers sources."
 
 msgid "Device '%s' not found"
-msgstr ""
+msgstr "Le périphérique '%s' n'a pas été trouvé"
 
 msgid "Edit USB backup job"
-msgstr ""
+msgstr "Editer la tâche de sauvegarde usb"
 
 msgid "Enable"
-msgstr ""
+msgstr "Activer"
 
 msgid "Enable archive mode."
-msgstr ""
+msgstr "Activer le mode archive"
 
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Activer cette option pour conserver les fichiers partiellement transferés, sinon ils seront détruis en cas d'interruption du transfert."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Activé"
 
 msgid "Execute USB backup job"
-msgstr ""
+msgstr "Exectuer la tâche de sauvegarde USB"
 
 msgid "External storage device"
-msgstr ""
+msgstr "Périphérique de stockage externe"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Options supplémentaires"
 
 msgid "Failed to get filesystems"
-msgstr ""
+msgstr "Echec de lecture du système de fichier"
 
 msgid "Filesystem '%s' not found"
-msgstr ""
+msgstr "Système de fichier '%s' non trouvé"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Converse les fichiers partiellement transferés"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Veuillez vous référer aux <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>pages du manuel</a> pour plus de détails."
 
 msgid "Preserve ACLs"
-msgstr ""
+msgstr "Preserver les ACL"
 
 msgid "Preserve extended attributes"
-msgstr ""
+msgstr "Preserver les attributs étendus"
 
 msgid "Preserve modification times."
-msgstr ""
+msgstr "Préserver les dates et heures de modification."
 
 msgid "Preserve permissions"
-msgstr ""
+msgstr "Preserver les permissions"
 
 msgid "Quiet"
-msgstr ""
+msgstr "Silencieux"
 
 msgid "Recurse into directories."
-msgstr ""
+msgstr "Parcourir les dossiers récursivement"
 
 msgid "Recursive"
-msgstr ""
+msgstr "Récursif"
 
 msgid "Run"
-msgstr ""
+msgstr "Lancer"
 
 msgid "Select a volume ..."
-msgstr ""
+msgstr "Selectionner un volume"
 
 msgid "Send command output via email."
-msgstr ""
+msgstr "Envoyer la sortie de la commande par mail."
 
 msgid "Send email"
-msgstr ""
+msgstr "Envoyer un email"
 
 msgid ""
 "Set the destination permissions to be the same as the source permissions."
-msgstr ""
+msgstr "Configurer les permissions de la destionation à l'identique de celles de la source."
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Dossier partagé"
 
 msgid "Suppress non-error messages."
-msgstr ""
+msgstr "Conserver uniquement les messages d'erreurs."
 
 msgid "The external storage device."
-msgstr ""
+msgstr "Le périphérique de stockage externe"
 
 msgid ""
 "The shared folder to synchronise when the external storage device is "
 "connected."
-msgstr ""
+msgstr "Le dossier partagé à synchroniser lorsque le périphérique de stockage externe est connecté."
 
 msgid "Times"
-msgstr ""
+msgstr "Heure et date"
 
 msgid "USB Backup"
-msgstr ""
+msgstr "Sauvegarde USB"
 
 msgid "Update the destination ACLs to be the same as the source ACLs."
-msgstr ""
+msgstr "Mettre à jour les ACL de destination pour correspondre au ACL de la source."
 
 msgid ""
 "Update the destination extended attributes to be the same as the local ones."
-msgstr ""
+msgstr "Mettre à jour les attribus étendus de la destination pour correspondre à celles locales."
 
 msgid "Volume"
-msgstr ""
+msgstr "Volume"
 
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
