--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Christophe Lherieau <skimpax@gmail.com>, 2012-2013.
-# Nahir Mohamed <nahirmoha@gmail.com>, 2012.
+# Nahir Mohamed <nahirmoha@gmail.com>, 2012-2013.
 # Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012.
 # Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012.
 msgid ""
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:27+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 19:03+0000\n"
+"Last-Translator: Nahir Mohamed <nahirmoha@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2012,7 +2012,7 @@ msgid "Online"
 msgstr "En ligne"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Opération non permise pour l'utilisateur '%s'."
 
 msgid "Options"
 msgstr "Options"
@@ -2992,7 +2992,7 @@ msgstr "Le nom du service."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Temps d'activité de la session en minutes. Mettre à 0 pour désactiver la déconnexion automatique."
 
 msgid "The shared folder is already used by another share"
 msgstr "Le dossier partagé est déjà utilisé par un autre partage."
