--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-netatalk (0.4.4) stable; urgency=low
+
+  * Mantis 0000724: Bug with group names with spaces for samba in shared
+    folders.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 19 Feb 2013 20:38:35 +0100
+
 openmediavault-netatalk (0.4.3) stable; urgency=low
 
   * Update locales.
