--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-netatalk (0.4.4) stable; urgency=low
 
+  * Update locales.
   * Mantis 0000724: Bug with group names with spaces for samba in shared
     folders.
 
