--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/fr_FR/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/fr_FR/openmediavault-netatalk.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # Christophe Lherieau <skimpax@gmail.com>, 2012.
+# Nahir Mohamed <nahirmoha@gmail.com>, 2013.
 # Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012.
 # Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012.
 msgid ""
@@ -11,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-10 00:15+0100\n"
-"PO-Revision-Date: 2013-02-09 23:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 19:01+0000\n"
+"Last-Translator: Nahir Mohamed <nahirmoha@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,22 +22,22 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgid " "
-msgstr ""
+msgstr " "
 
 msgid "Add share"
 msgstr "Ajouter un partage"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Paramètres avancés"
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr "Annoncer ce service via mDNS/DNS-SD."
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Autoriser la connexion invité"
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Autoriser les invités à créer ou modifier des fichiers."
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "Autoriser les connexions avec mots de passe transmis en clair."
@@ -87,10 +88,10 @@ msgid "General settings"
 msgstr "Paramètres généraux"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Connexion invité"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "Les invités ont uniquement accès en lecture par défaut"
 
 msgid "Hide dot files"
 msgstr "Cacher les fichiers systèmes"
