--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/gl/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/gl/openmediavault-netatalk.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-10 00:15+0100\n"
-"PO-Revision-Date: 2013-02-09 23:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 13:08+0000\n"
+"Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (http://www.transifex.com/projects/p/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,100 +19,100 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid " "
-msgstr ""
+msgstr " "
 
 msgid "Add share"
-msgstr ""
+msgstr "Engadir recurso compartido"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Axustes avanzados"
 
 msgid "Advertise this service via mDNS/DNS-SD."
-msgstr ""
+msgstr "Anunciar este servizo a través de mDNS/DNS-SD."
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Permitir acceso como convidado"
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Permitirlle aos convidados crear ou modificar ficheiros."
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr ""
+msgstr "Permitir accesos con contrasinais transmitidos en claro."
 
 msgid "Allow plain passwords"
-msgstr ""
+msgstr "Permitir contrasinais simples"
 
 msgid "Apple Filing"
-msgstr ""
+msgstr "Apple Filing"
 
 msgid "Case folding"
-msgstr ""
+msgstr "Inversión MAIÚS./minús."
 
 msgid "Client sees lowercase, server sees uppercase"
-msgstr ""
+msgstr "O cliente ve minúsculas, o servidor ve maiúsculas"
 
 msgid "Client sees uppercase, server sees lowercase"
-msgstr ""
+msgstr "O cliente ve maiúsculas, o servidor ve minúsculas"
 
 msgid "Comment"
 msgstr "Comentario"
 
 msgid "DNS Service Discovery"
-msgstr ""
+msgstr "Descubrimento de servizos DNS"
 
 msgid "Don't do :hex translation for dot files."
-msgstr ""
+msgstr "Non facer tradución :hexadecimal para ficheiros con punto."
 
 msgid "Edit share"
-msgstr ""
+msgstr "Editar o recurso compartido"
 
 msgid "Enable"
 msgstr "Activar"
 
 msgid "Enable Time Machine support for this share."
-msgstr ""
+msgstr "Activar a compatibilidade deste recurso compartido co «Time Machine»"
 
 msgid "Enable user home directories."
-msgstr ""
+msgstr "Activar os directorios persoais dos usuarios."
 
 msgid "Extra options"
 msgstr "Opcións adicionais"
 
 msgid "Forces filename restrictions"
-msgstr ""
+msgstr "Forzar as restricións a nomes de ficheiro"
 
 msgid "General settings"
 msgstr "Axustes xerais"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Acceso como convidado"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "De xeito predeterminado os convidados só teñen acceso para lectura."
 
 msgid "Hide dot files"
 msgstr "Agochar os ficheiros con punto"
 
 msgid "Home directories"
-msgstr ""
+msgstr "Directorios persoais"
 
 msgid ""
 "If this option is set, then a password is required to access the share."
-msgstr ""
+msgstr "Se está activada esta opción, requirirase un contrasinal para acceder ao recurso compartido."
 
 msgid ""
 "If this option is set, then users may not create or modify files in the "
 "share."
-msgstr ""
+msgstr "Si se activa esta opción, os usuarios non poderán crear ou modificar ficheiros no recurso compartido."
 
 msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
 " from using the whole disk space for backup. Set this value to 0 to disable "
 "this option."
-msgstr ""
+msgstr "Limitar o tamaño informado do volume polo valor dado en MiB, evitando así que TM utilice todo o espazo de disco para a copia de seguranza. Estabeleza este valor en 0 para desactivar esta opción."
 
 msgid "Lowercases names in both directions"
-msgstr ""
+msgstr "Nomes en minúsculas en ambas direccións"
 
 msgid "Make dot files invisible."
 msgstr "Facer que os ficheiros con punto non sexan visíbeis."
@@ -142,23 +142,23 @@ msgid "Shared folder"
 msgstr "Cartafol compartido"
 
 msgid "Shares"
-msgstr "Comparticións"
+msgstr "Recursos compartidos"
 
 msgid "The location of the files to share."
 msgstr "A localización dos ficheiros que compartir."
 
 msgid "The name of the share."
-msgstr ""
+msgstr "O nome do recurso compartido"
 
 msgid "The service name."
 msgstr "O nome do servizo."
 
 msgid ""
 "This forces filenames to be restricted to the character set used by Windows."
-msgstr ""
+msgstr "Isto forza a que os nomes de ficheiro estean restrinxidos polo conxunto de caracteres utilizado por Windows."
 
 msgid "This option handles, if the case of filenames should be changed."
-msgstr ""
+msgstr "Esta opción encargase, no seu caso, de se os nomes de ficheiro deben ser cambiados."
 
 msgid "Time Machine support"
 msgstr "Compatibilidade con «Time Machine»"
@@ -167,7 +167,7 @@ msgid "Unix privileges"
 msgstr "Privilexios Unix"
 
 msgid "Uppercases names in both directions"
-msgstr ""
+msgstr "Nomes en maiúsculas en ambas direccións"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Usar os privilexios AFP3 de Unix"
@@ -178,7 +178,7 @@ msgstr "Usar puntos"
 msgid ""
 "When this option gets set, certain file names become illegal. These are "
 ".Parent and anything that starts with .Apple."
-msgstr ""
+msgstr "Cando se estabelece esta opción, certos nomes de ficheiro non serán aceptados. Éstes son «.Parent» e calquera cousa que comece por «.Apple»."
 
 msgid "n/a"
 msgstr "n/d"
