--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/no_NO/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/no_NO/openmediavault-netatalk.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#  <runesudden@gmail.com>, 2013.
 #   <runesudden@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-10 00:15+0100\n"
-"PO-Revision-Date: 2013-02-09 23:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-16 08:15+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,22 +20,22 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid " "
-msgstr ""
+msgstr "."
 
 msgid "Add share"
 msgstr "Legg til delt område"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Avanserte instillinger"
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr "Annonser denne tjenesten via mDNS/DNS-SD."
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Tillat gjesteinnlogging"
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Tillat gjester å skape eller endre filer."
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "Tillat login med passord sendt ukryptert."
@@ -85,10 +86,10 @@ msgid "General settings"
 msgstr "Generelle innstillinger"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Gjesteinnlogging"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "Gjester har som standard kun leserettigheter"
 
 msgid "Hide dot files"
 msgstr "Skjul dot filer"
