--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/zh_TW/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/zh_TW/openmediavault-netatalk.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-10 00:15+0100\n"
-"PO-Revision-Date: 2013-02-09 23:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-15 20:57+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,22 +19,22 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid " "
-msgstr ""
+msgstr " "
 
 msgid "Add share"
 msgstr "新增共享"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "進階設定"
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr "經由 mDNS/DNS-SD 來宣告此項服務。"
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "允許訪客登入。"
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "允許訪客新建或修改檔案。"
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "允許登入的密碼以明文傳輸。"
@@ -85,10 +85,10 @@ msgid "General settings"
 msgstr "一般設定"
 
 msgid "Guest login"
-msgstr ""
+msgstr "訪客登入"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "在預設情況下，訪客只具有讀取的權限。"
 
 msgid "Hide dot files"
 msgstr "隱藏點檔案"
