--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (0.4.4) stable; urgency=low
+
+  * Unmount USB device after synchronisation has been finished.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 20 Feb 2013 17:43:46 +0100
+
 openmediavault-usbbackup (0.4.3) stable; urgency=low
 
   * Update locales.
