--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (0.4.5) stable; urgency=low
+
+  * Improve guest account configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 24 Feb 2013 17:12:43 +0100
+
 openmediavault-netatalk (0.4.4) stable; urgency=low
 
   * Update locales.
