--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.25) stable; urgency=low
+
+  * Mantis 0000731: Relocate monit.state file.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 28 Feb 2013 18:21:47 +0100
+
 openmediavault (0.4.24) stable; urgency=low
 
   * Make fstab config script less restrictive.
