--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (0.4.6) stable; urgency=low
+
+  * Mantis 0000732: Logrotate has duplicate entry for /var/log/clamav/clamav.log.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 28 Feb 2013 10:30:16 +0100
+
 openmediavault-clamav (0.4.5) stable; urgency=low
 
   * Improve config scripts (to fix trap issue).
