--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-11 18:49+0000\n"
+"PO-Revision-Date: 2013-02-21 23:24+0000\n"
 "Last-Translator: polxmod <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -1374,7 +1374,7 @@ msgid "Identify network interface device"
 msgstr "Identifica il dispositivo dell'interfaccia di rete"
 
 msgid "Idle"
-msgstr "Attesa"
+msgstr "Inattivo"
 
 msgid "If enabled then no password is required to connect to the share"
 msgstr "Se abilitato non sarà necessaria una password per connettersi alla condivisione"
@@ -2801,7 +2801,7 @@ msgid "Sri Lanka"
 msgstr "Sri Lanka"
 
 msgid "Standby"
-msgstr "Attesa"
+msgstr "Standby"
 
 msgid "Start"
 msgstr "Avvio"
