--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:28+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-26 10:16+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,7 +1042,7 @@ msgstr "Włącz protokół identyfikacji (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Włącz tę opcję, aby zachować częściowo przesłane pliki, w przeciwnym razie zostaną one usunięte gdy transfer zostanie przerywany."
 
 msgid "Enable user authentication"
 msgstr "Włącz uwierzytelnianie użytkownika"
@@ -1542,7 +1542,7 @@ msgid "Kazakhstan"
 msgstr "Kazakhstan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Zachowaj częściowo przesłane pliki"
 
 msgid "Kenya"
 msgstr "Kenya"
@@ -2013,7 +2013,7 @@ msgid "Online"
 msgstr "Online"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Operacja niedozwolona dla użytkownika '%s'."
 
 msgid "Options"
 msgstr "Opcje"
@@ -2091,7 +2091,7 @@ msgid "People's Democratic Republic of Yemen"
 msgstr "People's Democratic Republic of Yemen"
 
 msgid "Perform a trial run with no changes made"
-msgstr ""
+msgstr "Wykonaj próby bez zmian"
 
 msgid "Period of validity"
 msgstr "Okres ważnośći"
@@ -2993,7 +2993,7 @@ msgstr "Nazwa usługi"
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Czas limit sesji w minutach. Ustaw na 0, aby wyłączyć automatyczne wylogowanie."
 
 msgid "The shared folder is already used by another share"
 msgstr "Współdzielony katalog jest użytkowany przez inny zasób"
