Mantis 0000733: Display more informations in welcome message.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (0.4.25) stable; urgency=low
 
   * Update locales.
   * Mantis 0000731: Relocate monit.state file.
+  * Mantis 0000733: Display more informations in welcome message.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 28 Feb 2013 18:21:47 +0100
 
