Fix FTP shared folder issue. See http://forums.openmediavault.org/viewtopic.php?f=19&t=1589

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (0.4.25) stable; urgency=low
 
   * Update locales.
+  * Fix FTP shared folder issue.
   * Mantis 0000731: Relocate monit.state file.
   * Mantis 0000733: Display more informations in welcome message.
 
